tests/snapshots/run_wpt_conformance__onnx_softmax_float16_2D_tensor_all_positive.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "softmax.https.any.js",
    "softmax float16 2D tensor all positive",
    "onnx",
    "PASS",
)
